[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="Control"]
margin_left = 3.51624
margin_top = -0.563263
margin_right = 1027.52
margin_bottom = 599.437
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 693.0
margin_top = 353.0
margin_right = 998.0
margin_bottom = 445.0
rect_rotation = -18.1032

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 305.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 305.0
margin_bottom = 44.0
text = "Load Game"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 305.0
margin_bottom = 68.0
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 305.0
margin_bottom = 92.0
focus_neighbour_bottom = NodePath("../NewGameButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
